ch: update the docs link

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -5,7 +5,7 @@
       <p>If you want to test the API documentation, please use this link:
         <button>
           <a
-            href="https://team-cyper-ecom-main.onrender.com/docs"
+            href="https://demo-gmlh.onrender.com/docs/"
             target="_blank"
           >E-Comm-Bn</a>
         </button>
